[package]
name = "restful-cache"
version = "0.2.0"
edition = "2024"

[dependencies]
# List your dependencies here. For example:
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
anyhow = "1.0"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "restful_cache"
path = "src/lib.rs"
