[package]
name = "restful-cache"
version = "0.2.0"
edition = "2024"
description = "A RESTful caching library"
license = "MIT"
repository = "https://github.com/your-username/restful-cache"
documentation = "https://docs.rs/restful-cache"

[dependencies]
# List your dependencies here. For example:
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
anyhow = "1.0"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "restful_cache"
path = "src/lib.rs"
